New extension export from 2025-09-10

--- a/Personal AdGuard configuration.json
+++ b/Personal AdGuard configuration.json
@@ -15,7 +15,7 @@
       "show-info-about-adguard":false,
       "show-app-updated-info":false,
       "hide-rate-adguard":false,
-      "user-rules-editor-wrap":false
+      "user-rules-editor-wrap":true
    },
    "filters":{
       "enabled-filters":[
@@ -31,10 +31,11 @@
          204,
          207,
          251,
+         1000,
+         1001,
+         1002,
          1003,
-         1004,
-         1005,
-         1006
+         1004
       ],
       "enabled-groups":[
          0,
@@ -46,14 +47,8 @@
       ],
       "custom-filters":[
          {
-            "customUrl":"https://raw.githubusercontent.com/gijsdev/ublock-hide-yt-shorts/refs/heads/master/list.txt",
-            "title":"Hide YouTube Shorts",
-            "trusted":false,
-            "enabled":true
-         },
-         {
-            "customUrl":"https://raw.githubusercontent.com/Norsagir/adguard-custom-filters/refs/heads/main/local-ips.txt",
-            "title":"Local IPs",
+            "customUrl":"https://raw.githubusercontent.com/Norsagir/adguard-custom-filters/refs/heads/main/youtube-hide-watched.txt",
+            "title":"Hide YT watched videos",
             "trusted":true,
             "enabled":true
          },
@@ -64,8 +59,8 @@
             "enabled":true
          },
          {
-            "customUrl":"https://raw.githubusercontent.com/Norsagir/adguard-custom-filters/refs/heads/main/youtube-hide-watched.txt",
-            "title":"Hide YT watched videos",
+            "customUrl":"https://raw.githubusercontent.com/Norsagir/adguard-custom-filters/refs/heads/main/local-ips.txt",
+            "title":"Local IPs",
             "trusted":true,
             "enabled":true
          },
@@ -73,6 +68,12 @@
             "customUrl":"https://raw.githubusercontent.com/Norsagir/adguard-custom-filters/refs/heads/main/annoying-html-blocks.txt",
             "title":"Annoying HTML Blocks",
             "trusted":true,
+            "enabled":true
+         },
+         {
+            "customUrl":"https://raw.githubusercontent.com/gijsdev/ublock-hide-yt-shorts/refs/heads/master/list.txt",
+            "title":"Hide YouTube Shorts",
+            "trusted":false,
             "enabled":true
          }
       ],
